--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 # Site Author
 author:
   name             : "Pinjia He"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "Postdoctoral fellow at ETH Zurich. Incoming assistant professer at CUHK-SZ."
   location         : "Zurich, Switzerland"
   employer         :
