--- a/images/manifest.json
+++ b/images/manifest.json
@@ -1,8 +1,8 @@
 {
-	"name": "Rob Williams",
+	"name": "Pinjia He",
 	"icons": [
 		{
-			"src": "\/images\/android-chrome-192x192.png?v=M44lzPylqQ",
+			"src": "\/images\/android-chrome-192x192.png",
 			"sizes": "192x192",
 			"type": "image\/png",
 			"density": 4
