--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Pinjia He"
 title_separator          : "-"
 name                     : &name "Pinjia He"
-description              : &description "Postdoctoral fellow at ETH Zurich"
+description              : &description "Assistant professor at CUHK (Shenzhen)"
 url                      : https://pinjiahe.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "PinjiaHe.github.io"
