--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ analytics:
 author:
   name             : "Pinjia He"
   avatar           : "profile.jpg"
-  bio              : "Assistant professer, Presidential Young Fellow at CUHKSZ."
+  bio              : "Assistant professer and Presidential Young Fellow at CUHKSZ."
   location         : "Shenzhen, China"
   employer         :
   pubmed           :
